--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^5.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "chai": "^5.1.1",
-    "ethereum-waffle": "^4.0.10",
-    "ethers": "^6.13.1",
+    "ethereum-waffle": "^3.0.0",
+    "ethers": "^5.5.4",
     "hardhat": "^2.22.6",
     "ipfs-http-client": "^60.0.1",
     "react": "^18.3.1",
